--- a/index.html
+++ b/index.html
@@ -6,22 +6,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
     <title>Wigs</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="sidebar">Sidebar</div>
-        <div class="header">Header</div>
-        <div class="content">
-            <img class="img1" src="img/img-main/1.png" alt="img">
-            <img class="img2" src="img/img-main/2.png" alt="img">
-            <img class="img3" src="img/img-main/3.png" alt="img">
-            <img class="img4" src="img/img-main/4.png" alt="img">
-            <img class="img5" src="img/img-main/5.png" alt="img">
-            <img class="img6" src="img/img-main/6.jpg" alt="img">
-            <img class="img7" src="img/img-main/7.png" alt="img">
-            <img class="img8" src="img/img-main/8.png" alt="img">
+    <div class="container">
+        <div class="wrapper">
+
+            <div class="sidebar">
+                <a class="logo" href="#">
+                    <img src="img/logo.png" alt="logo">
+
+                </a>
+                <div class="explore">
+                    <a href="#">Explore</a>
+                </div>
+
+                <aside class="dsc">
+                    <li><a href="#">New In</a></li>
+                    <li><a href="#">Clothing</a></li>
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">Accessories</a></li>
+                    <li><a href="#">Activewear</a></li>
+                    <li><a href="#">Gifts & Living</a></li>
+                    <li><a href="#">Inspiration</a></li>
+                </aside>
+
+            </div>
+
+            <div class="header">
+                <div class="item">
+                    <a id="item-1" href="#">products</a>
+                    <a id="item-2" href="#">story</a>
+                    <a id="item-3" href="#">manufacturing</a>
+                    <a id="item-4" href="#">packaging</a>
+                </div>
+                    
+                <span class="material-icons">
+                    shopping_cart
+                </span>
+                <span class="material-icons">
+                    person
+                </span>
+            </div>
+
+            <div class="content">
+                <img class="img1" src="img/img-main/1.png" alt="img">
+                <img class="img2" src="img/img-main/2.png" alt="img">
+                <img class="img3" src="img/img-main/3.png" alt="img">
+                <img class="img4" src="img/img-main/4.png" alt="img">
+                <img class="img5" src="img/img-main/5.png" alt="img">
+                <img class="img6" src="img/img-main/6.jpg" alt="img">
+                <img class="img7" src="img/img-main/7.png" alt="img">
+                <img class="img8" src="img/img-main/8.png" alt="img">
+            </div>
         </div>
     </div>
 
